--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.34.0",
-    "lucide-react": "^0.474.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-intersection-observer": "^9.13.0"
+    "lucide-react": "0.474.0",
+    "@google/genai": "1.34.0",
+    "react-intersection-observer": "9.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
